--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@ html {
   background-color: #1b1919;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 h1,
@@ -50,15 +51,17 @@ ol {
   overflow: hidden;
 }
 
+.search-form__fieldset:nth-child(1) {
+  max-width: 225px;
+}
+
 .content {
   display: flex;
-  max-height: 534px;
-  margin-top: 133px;
   justify-content: center;
 }
 
 .title {
-  font-family: Oswald;
+  font-family: Oswald, Arial, sans-serif;
   font-size: 75px;
   font-style: normal;
   font-weight: 700;
@@ -74,6 +77,7 @@ ol {
   display: flex;
   flex-direction: column;
   gap: 26px;
+  min-width: 399px;
   margin-left: 30px;
 }
 
@@ -83,7 +87,7 @@ ol {
   display: flex;
   flex-direction: column;
   gap: 30px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .content__video-card {
@@ -130,11 +134,12 @@ ol {
 .content__video-card-thumbnail {
   width: 194px;
   height: 103px;
+  object-position: center;
 }
 
 .content__video-card-title {
   color: #FFF;
-  font-family: Oswald;
+  font-family: Oswald, Arial, sans-serif;
   font-size: 30px;
   font-style: normal;
   font-weight: 700;
@@ -142,48 +147,57 @@ ol {
   text-transform: uppercase;
   text-decoration: none;
   margin-bottom: 6px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 199px;
 }
 
 .content__video-card-description {
+  max-width: 200px;
   color: #FFF;
-  font-family: "Fira Sans Condensed";
+  font-family: "Fira Sans Condensed", Arial, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 16.2px;
 }
 
-.more-button {
+.button {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 399px;
-  height: 34px;
   background-color: transparent;
+  border: 1px solid currentColor;
   color: #FFF;
-  border: 1px solid #FFF;
   text-align: center;
   font-family: "Fira Sans Condensed";
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
   cursor: pointer;
+}
+
+
+.more-button {
+  width: 399px;
+  height: 34px;
   margin: 2px;
 }
 
-.more-button:active {
+.button:active {
   background-color: #545050;
 }
 
-.more-button:hover {
+.button:hover {
   text-decoration: underline;
 }
 
-.more-button:focus {
+.button:focus {
   outline: none;
 }
 
-.more-button:focus-visible {
+.button:focus-visible {
   outline: 1px solid #FFF;
   outline-offset: 2px;
 }
@@ -191,7 +205,7 @@ ol {
 .result {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  margin-top: 75px;
   gap: 16px;
 }
 
@@ -200,6 +214,7 @@ ol {
   display: flex;
   justify-content: space-between;
   gap: 40px;
+  max-width: 711px;
 }
 
 .search-form__fieldset {
@@ -207,11 +222,16 @@ ol {
 }
 
 .search-form__fieldset-title {
+  max-width: 225px;
   color: #FFF;
-  font-family: "Fira Sans Condensed";
+  font-family: "Fira Sans Condensed", Arial, sans-serif;
   font-size: 18px;
   font-weight: 400;
   margin-bottom: 5px;
+}
+
+.search-form__fieldset-title:nth-child(1) {
+  max-width: 212px;
 }
 
 .search-form__textfield {
@@ -219,20 +239,20 @@ ol {
   width: 225px;
   background-color: transparent;
   border: none;
-  border-top: 1px solid #FFF;
-  border-bottom: 1px solid #FFF;
-  color: rgba(255, 255, 255, 0.70);
-  font-family: "Fira Sans Condensed";
+  border-top: 1px solid currentColor;
+  border-bottom: 1px solid currentColor;
+  color: rgba(255, 255, 255);
+  font-family: "Fira Sans Condensed", Arial, sans-serif;
   font-size: 18px;
   font-weight: 400;
   outline: none;
-  margin: 2px;
 
 }
 
 .search-form__label:has(.search-form__textfield:focus-visible) {
   outline: 1px solid #fff;
   border: none;
+  outline-offset: 2px;
 }
 
 .search-form__textfield:active {
@@ -243,6 +263,7 @@ ol {
 .search-form__checkbox-list {
   display: flex;
   gap: 15px;
+  max-width: 212px;
 }
 
 .search-form__label {
@@ -250,39 +271,30 @@ ol {
   align-items: center;
   gap: 5px;
   position: relative;
+  max-width: 225px;
 }
 
-.search-form__label:hover {
+.search-form__checkbox-list>.search-form__label:hover {
+  text-decoration: underline;
   cursor: pointer;
 }
 
-
 .search-form__label:has(.search-form__checkbox:focus-visible) {
-  outline: 1px solid #fff;
+  outline: 1px solid currentColor;
   outline-offset: 2px;
 }
 
 
 .search-form__label-text {
-  font-family: "Fira Sans Condensed";
+  font-family: "Fira Sans Condensed", Arial, sans-serif;
   font-size: 18px;
 }
 
+
+
 .search-form__submit-button {
-  display: flex;
-  justify-content: center;
   width: 194px;
   height: 34px;
-  align-items: center;
-  background-color: transparent;
-  border: 1px solid #FFF;
-  color: #FFF;
-  text-align: center;
-  font-family: "Fira Sans Condensed";
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 700;
-  cursor: pointer;
   margin-top: auto;
 }
 
@@ -317,6 +329,7 @@ ol {
 .result__video {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .search-form__checkbox+.search-form__pseudo-checkbox {
@@ -335,5 +348,4 @@ ol {
   width: 16px;
   height: 16px;
   background-color: white;
-
 }
